--- a/css/styles.css
+++ b/css/styles.css
@@ -3,3 +3,20 @@ h1 {
   font-weight: 100;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
+
+.subheading {
+  text-align: center;
+  font-weight: bold;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.gallery-img {
+  width: 20%;
+  float: left;
+  background-color: lemonchiffon;
+  text-align: center;
+}
+
+hr {
+  color: darkblue;
+}
