--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
-h1 {
+.flashy {
+  color: red;
   font-style: italic;
   font-weight: 100;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
